@@ -58,7 +58,7 @@ import java.util.concurrent.TimeUnit;
 public class SimpleFacets {
 
   /** The main set of documents all facet counts should be relative to */
-  protected DocSet docs;
+  protected DocSet docsOrig;
   /** Configuration params behavior should be driven by */
   protected SolrParams params;
   protected SolrParams required;
@@ -70,11 +70,11 @@ public class SimpleFacets {
   protected SimpleOrderedMap<Object> facetResponse;
 
   // per-facet values
-  SolrParams localParams; // localParams on this particular facet command
-  String facetValue;      // the field to or query to facet on (minus local params)
-  DocSet base;            // the base docset for this particular facet
-  String key;             // what name should the results be stored under
-  int threads;
+  protected SolrParams localParams; // localParams on this particular facet command
+  protected String facetValue;      // the field to or query to facet on (minus local params)
+  protected DocSet docs;            // the base docset for this particular facet
+  protected String key;             // what name should the results be stored under
+  protected int threads;
 
   public SimpleFacets(SolrQueryRequest req,
                       DocSet docs,
@@ -88,16 +88,16 @@ public class SimpleFacets {
                       ResponseBuilder rb) {
     this.req = req;
     this.searcher = req.getSearcher();
-    this.base = this.docs = docs;
+    this.docs = this.docsOrig = docs;
     this.params = params;
     this.required = new RequiredSolrParams(params);
     this.rb = rb;
   }
 
 
-  void parseParams(String type, String param) throws ParseException, IOException {
+  protected void parseParams(String type, String param) throws ParseException, IOException {
     localParams = QueryParsing.getLocalParams(param, req.getParams());
-    base = docs;
+    docs = docsOrig;
     facetValue = param;
     key = param;
     threads = -1;
@@ -166,7 +166,7 @@ public class SimpleFacets {
         } else if (rb.getGroupingSpec().getFunctions().length > 0) {
           grouping.addFunctionCommand(rb.getGroupingSpec().getFunctions()[0], req);
         } else {
-          this.base = base;
+          this.docs = base;
           return;
         }
         AbstractAllGroupHeadsCollector allGroupHeadsCollector = grouping.getCommands().get(0).createAllGroupCollector();
@@ -174,9 +174,9 @@ public class SimpleFacets {
         int maxDoc = searcher.maxDoc();
         FixedBitSet fixedBitSet = allGroupHeadsCollector.retrieveGroupHeads(maxDoc);
         long[] bits = fixedBitSet.getBits();
-        this.base = new BitDocSet(new OpenBitSet(bits, bits.length));
+        this.docs = new BitDocSet(new OpenBitSet(bits, bits.length));
       } else {
-        this.base = base;
+        this.docs = base;
       }
     }
 
@@ -184,7 +184,7 @@ public class SimpleFacets {
 
 
   /**
-   * Looks at various Params to determing if any simple Facet Constraint count
+   * Looks at various Params to determining if any simple Facet Constraint count
    * computations are desired.
    *
    * @see #getFacetQueryCounts
@@ -245,7 +245,7 @@ public class SimpleFacets {
         if (params.getBool(GroupParams.GROUP_FACET, false)) {
           res.add(key, getGroupedFacetQueryCount(qobj));
         } else {
-          res.add(key, searcher.numDocs(qobj, base));
+          res.add(key, searcher.numDocs(qobj, docs));
         }
       }
     }
@@ -269,7 +269,7 @@ public class SimpleFacets {
     }
     
     TermAllGroupsCollector collector = new TermAllGroupsCollector(groupField);
-    Filter mainQueryFilter = docs.getTopFilter(); // This returns a filter that only matches documents matching with q param and fq params
+    Filter mainQueryFilter = docsOrig.getTopFilter(); // This returns a filter that only matches documents matching with q param and fq params
     searcher.search(facetQuery, mainQueryFilter, collector);
     return collector.getGroupCount();
   }
@@ -316,25 +316,25 @@ public class SimpleFacets {
     }
 
     if (params.getFieldBool(field, GroupParams.GROUP_FACET, false)) {
-      counts = getGroupedCounts(searcher, base, field, multiToken, offset,limit, mincount, missing, sort, prefix);
+      counts = getGroupedCounts(searcher, docs, field, multiToken, offset,limit, mincount, missing, sort, prefix);
     } else {
       // unless the enum method is explicitly specified, use a counting method.
       if (enumMethod) {
-        counts = getFacetTermEnumCounts(searcher, base, field, offset, limit, mincount,missing,sort,prefix);
+        counts = getFacetTermEnumCounts(searcher, docs, field, offset, limit, mincount,missing,sort,prefix);
       } else {
         if (multiToken) {
           UnInvertedField uif = UnInvertedField.getUnInvertedField(field, searcher);
-          counts = uif.getCounts(searcher, base, offset, limit, mincount,missing,sort,prefix);
+          counts = uif.getCounts(searcher, docs, offset, limit, mincount,missing,sort,prefix);
         } else {
           // TODO: future logic could use filters instead of the fieldcache if
           // the number of terms in the field is small enough.
           if (per_segment) {
-            PerSegmentSingleValuedFaceting ps = new PerSegmentSingleValuedFaceting(searcher, base, field, offset,limit, mincount, missing, sort, prefix);
+            PerSegmentSingleValuedFaceting ps = new PerSegmentSingleValuedFaceting(searcher, docs, field, offset,limit, mincount, missing, sort, prefix);
             Executor executor = threads == 0 ? directExecutor : facetExecutor;
             ps.setNumThreads(threads);
             counts = ps.getFacetCounts(executor);
           } else {
-            counts = getFieldCacheCounts(searcher, base, field, offset,limit, mincount, missing, sort, prefix);
+            counts = getFieldCacheCounts(searcher, docs, field, offset,limit, mincount, missing, sort, prefix);
           }
 
         }
@@ -434,7 +434,7 @@ public class SimpleFacets {
     NamedList<Integer> res = new NamedList<Integer>();
     for (String term : terms) {
       String internal = ft.toInternal(term);
-      int count = searcher.numDocs(new TermQuery(new Term(field, internal)), base);
+      int count = searcher.numDocs(new TermQuery(new Term(field, internal)), docs);
       res.add(term, count);
     }
     return res;    
@@ -1212,7 +1212,7 @@ public class SimpleFacets {
     if (params.getBool(GroupParams.GROUP_FACET, false)) {
       return getGroupedFacetQueryCount(rangeQ);
     } else {
-      return searcher.numDocs(rangeQ ,base);
+      return searcher.numDocs(rangeQ , docs);
     }
   }
 
@@ -1223,7 +1223,7 @@ public class SimpleFacets {
   protected int rangeCount(SchemaField sf, Date low, Date high,
                            boolean iLow, boolean iHigh) throws IOException {
     Query rangeQ = ((DateField)(sf.getType())).getRangeQuery(null, sf,low,high,iLow,iHigh);
-    return searcher.numDocs(rangeQ ,base);
+    return searcher.numDocs(rangeQ , docs);
   }
   
   /**
